--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.14.13",
     "@types/redis": "^2.8.28",
+    "@types/ws": "^7.4.0",
     "@types/yt-search": "^2.3.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
