--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     image: redis:latest
     ports:
       - 6379:6379
+    restart: always
   bot:
-    image: .
+    build: .
+    network_mode: service:db
